# pvtend

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api.rst  conf.py  index.rst  installation.rst  notebooks.rst  quickstart.rst
docs/_static/: ERA5_TempestExtremes_XTC_Boston.csv  ERA5_TempestExtremes_z500_anticyclone_blocking.csv  ERA5_TempestExtremes_z500_exclusif_anticyclone_propagating.csv
docs/_templates/: layout.html
docs/notebooks/: 00_idealized_6basis.ipynb  (+22 more)
examples/: 00_idealized_pvtend_decomp.ipynb  01_derivatives_and_grid.ipynb  01_rwb_and_derivatives.ipynb  02_helmholtz_and_qg_omega.ipynb  02_helmholtz_decomposition.ipynb  03_basis_decomposition.ipynb  03_four_basis_projection.ipynb  03_four_basis_projection_composite.ipynb  03_six_basis_projection_composite.ipynb  03c_six_basis_cyclone.ipynb  03prp_six_basis_anticyclone_timed_bases.ipynb  03z_four_basis_projection_geopotential.ipynb  04_qg_omega.ipynb  04_single_var_composite.ipynb  04_single_var_isentropic_composite.ipynb  04i_single_var_isentropic_composite.ipynb  05_grouped_terms_bootstrap.ipynb  05_stacked_bar_beta.ipynb  05_time_evolution_2d_fields.ipynb  05b_grouped_terms_bootstrap.ipynb  06_baroclinic_structure.ipynb  07_facet_blocking_vs_prp.ipynb  _generate_notebooks.py
outputs/: .gitignore
tests/: conftest.py  test_additivity_real.py  test_classify.py  test_cli.py  test_climatology.py  test_composite_builder.py  test_derivatives.py  test_helmholtz.py  test_interpolation.py  test_moist_dry.py  test_tendency.py
(+33 files in other folders)
